# llm-playground

./: README.md  STREAMLIT_README.md  UV_USAGE.md  async_query_20251026_170640.txt  async_query_20251026_174909.txt  async_query_20251026_183127.txt  async_query_20251026_185639.txt  async_query_20251026_224318.txt  auto_eval_reaction_field.py  auto_eval_synthesis_route.py  demo_usage.py  excel_query_example.py  modified_data.json  pyproject.toml  reaction_field_viewer.html  reaction_field_viewer.py  requirements.txt  run_viewer.bat  run_viewer.sh  setup.py  test_data.json  test_new_features.py  test_sync_fix.py
.streamlit/: config.toml
AZ_KB/: async_batch_excel_query.py  batch_excel_query.py  performance_guide.md  rag_chat_client.py  temp_output_real_api_水木-20251026.xlsx
data/synthesis_reaction_field/: qa_reaction_field_inout_head10.json
data/synthesis_route_desc/: qa_reaction_desc_inout.json  qa_reaction_desc_inout_1-4.json  qa_reaction_desc_inout_11_diastereomers.json  qa_reaction_desc_inout_21_32.json  qa_reaction_desc_inout_7-32.json  qa_reaction_desc_inout_total41.json
eval_res_delivery/synthesis_route_desc/: ErrorDetails_QWEN25_14B.csv  ErrorDetails_gpt-4o.csv  ErrorEval_QWEN25_14B.xlsx  ErrorEval_gpt-4.xlsx  ErrorEval_gpt-4o.xlsx  all_stats.xlsx  report_ErrorEval_QWEN25_14B.txt  report_ErrorEval_gpt-4.txt  report_ErrorEval_gpt-4o.txt
infer_res_delivery/synthesis_reaction_field/: PatentReactionFieldAgent_gpt-4.json  PatentReactionFieldAgent_gpt-4o.json
llm_playground/: __init__.py  inference.py
llm_playground/core/: __init__.py  (+3 more)
scripts/: dev.py
(+17 files in other folders)
